# kaios-rust-todo-app

./: .dockerignore  .gitignore  Cargo.toml  README.md  Web.toml  build.rs
packed/: index.html  manifest.webapp
src/: log.rs  main.rs  style.scss
static/: index.html  manifest.webapp
static/css/: root.css  softkey.css
