[package]
name = "rust-test-app"
version = "0.1.0"
authors = ["Hugues Morisset <morisset.hugues@gmail.com>"]
edition = "2018"

[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
failure = "0.1.5"
sass-rs = "0.2.1"
url = "1.7.2"

[dependencies]
failure = "0.1.5"
log = "0.4.6"
stdweb = "0.4.17"

# Metadata used when generating an Android APK, for example.
[package.metadata.kaios]
app-name = "Rust App for KaiOS"
app-description = "Rust App for KaiOS"
app-icons = {"56" = "app_56.png", "112" = "app_112.png", "128" = "app_128.png"}
app-locales = { "en-US" = { "name" = "Rust App for KaiOS", "subtitle" = "Simple example", "description" = "Simple example" } }
app-default-locale = "en-US"
