[package]
name = "rust-test-app"
description = "Simple todo app for kaios in rust"
version = "0.1.0"
authors = ["Hugues Morisset <morisset.hugues@gmail.com>"]
edition = "2018"

[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
cargo_metadata = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
failure = "0.1.5"
url = "1.7.2"

[dependencies]
failure = "0.1.5"
log = "0.4.6"
stdweb = "0.4.17"

# Metadata used when generating kaios manifest
[package.metadata.kaios]
app-launch-path = "/index.html"
app-icons = {"56" = "app_56.png", "112" = "app_112.png", "128" = "app_128.png"}
app-locales = { "en-US" = { "name" = "Rust Todo App for KaiOS", "subtitle" = "Simple example", "description" = "Simple example" } }
